--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -8,10 +7,25 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <link href="/webjars/materializecss/1.0.0/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-<section layout:fragment="content">
-<p>Page content goes here</p>
-</section>
-<script src="/webjars/jquery/3.3.1-1/jquery.js"></script>
-<script src="/webjars/materializecss/1.0.0/js/materialize.js"></script>
+	<ul id="lang-dropdown" class="dropdown-content">
+	<li><a href="?lang=en_US">English</a></li>
+	<li><a href="?lang=zh_CN">中文</a></li>
+	</ul>
+	<nav>
+	<div class="nav-wrapper indigo">
+	<ul class="right">
+	<li>
+	<a class="dropdown-button" href="#!" data-activates="lang-dropdown"><i class="mdi-action-language right"></i>Lang</a>
+	</li>
+	</ul>
+	</div>
+	</nav>
+	<section layout:fragment="content">
+	<p>Page content goes here</p>
+	</section>
+	<script src="/webjars/jquery/3.3.1-1/jquery.js"></script>
+	<script src="/webjars/materializecss/1.0.0/js/materialize.js"></script>
+	<script type="text/javascript">$(".dropdown-button").dropdown();</script>
+	<script type="text/javascript" layout:fragment="script"></script>
 </body>
 </html>
