--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -11,8 +11,9 @@
 		
 	</div>
 	<ul class="collection">
-		<li class="collection-item avatar" th:each="tweet :${tweets}">
+		<li class="collection-item avatar" th:each="tweet:${tweets}">
 			<span class="title" th:text="${tweet.user.name}">Username</span>
+			<p th:text="${tweet.title}"/>
 			<p th:text="${tweet.text}">Tweet message</p>
 		</li>
 	</ul>
