--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -2,19 +2,22 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/default">
 <head lang="en">
 <title>Search</title>
+<link href="/webjars/materializecss/1.0.0/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-<div class="row" layout:fragment="content">
-<h4 class="indigo-text center">Please enter a search term</h4>
-<form action="twitt/searchResult" method="get" class="col s12">
-	<div class="row center">
-		<div class="input-field col s6 offset-s3">
-			<i class="mdi-action-search prefix"></i>
-			<input id="search" name="search" type="text" class="validate"/>
-			<label for="search">Search</label>
+	<div class="row" layout:fragment="content">
+	<h4 class="indigo-text center">Please enter a search term</h4>
+	<form action="searchResult" method="get" class="col s12">
+		<div class="row center">
+			<div class="input-field col s6 offset-s3">
+				<i class="mdi-action-search prefix"></i>
+				<input id="search" name="search" type="text" class="validate"/>
+				<label for="search">Search</label>
+			</div>
 		</div>
+	</form>
 	</div>
-</form>
-</div>
+	<script src="/webjars/jquery/3.3.1-1/jquery.js"></script>
+	<script src="/webjars/materializecss/1.0.0/js/materialize.js"></script>
 </body>
 </html>
